--- a/day-0721-spring-aop/pom.xml
+++ b/day-0721-spring-aop/pom.xml
@@ -24,7 +24,17 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+
+
     </dependencies>
+
+
+
 
 
 
