--- a/day-0723-spring-jdbc/pom.xml
+++ b/day-0723-spring-jdbc/pom.xml
@@ -26,6 +26,9 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId> </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.46</version>
